arruma algoritmo